# triangle

./: .gitignore  LICENSE  README.md  meson.build  pixi.toml
.github/workflows/: ci.yml  compilers.yml
src/: configure.h  meson.build  triangle.c
